tests/ui/unsafe-fields/auto-traits.next.stderr
error[E0277]: the trait bound `UnsafeEnum: UnsafeAuto` is not satisfied
  --> $DIR/auto-traits.rs:24:22
   |
LL |     impl_unsafe_auto(UnsafeEnum::Safe(42));
   |     ---------------- ^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |     |
   |     required by a bound introduced by this call
   |
help: the trait `UnsafeAuto` is not implemented for `UnsafeEnum`
  --> $DIR/auto-traits.rs:9:1
   |
LL | enum UnsafeEnum {
   | ^^^^^^^^^^^^^^^
note: required by a bound in `impl_unsafe_auto`
  --> $DIR/auto-traits.rs:20:29
   |
LL | fn impl_unsafe_auto(_: impl UnsafeAuto) {}
   |                             ^^^^^^^^^^ required by this bound in `impl_unsafe_auto`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
